--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <img src="images/profile-1.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Prakash and I'm a Developer</span></div>
+                    <div class="text">I'm Saket and I'm a Developer</span></div>
                     <p>I'm currently a 2nd year student in Bachelors of Computer Science from Lovely Professional Universilty,Punjab and I'm a coding enthusiast. I love AI and ML and I'm doing quite good in it.I've completed my school from St. Francis Inter College,Hathras.<br>You can visit my  <a href="https://www.linkedin.com/in/saket10/">LinkedIn</a> profile to connect with me and check my certification and accomplishments.If you want some idea about my projects go to my <a href="https://github.com/Saketthenuan">Github</a></p>
                     <a href="#">Download CV</a>
                 </div>
