--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
+                <img src="images/profile-1.jpg" alt="">
                 <div class="text-1">Hey there, I'm your host</div>
                 <div class="text-2">Saket Thenua</div>
                 <div class="text-3">And I'm a Developer</span></div>
