--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+an<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -60,8 +60,8 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Saket and I'm a Developer</span></div>
-                    <p>I'm currently a 2nd year student in Bachelors of Computer Science from Lovely Professional Universilty,Punjab and I'm a coding enthusiast. I love AI and ML and I'm doing quite good in it.I've completed my school from St. Francis Inter College,Hathras.<br>You can visit my  <a href="https://www.linkedin.com/in/saket10/">LinkedIn</a> profile to connect with me and check my certification and accomplishments.If you want some idea about my projects go to my <a href="https://github.com/Saketthenuan">Github</a></p>
-                    <a href="#">Download CV</a>
+                    <p>I'm currently a Freelancer and student of Bachelors of Computer Science and I'm a coding enthusiast. I love AI and ML and I'm doing quite good in it.<br>You can visit my  <a href="https://www.linkedin.com/in/saket10/">LinkedIn</a> profile to connect with me and check my certification and accomplishments.If you want some idea about my projects go to my <a href="https://github.com/Saketthenuan">Github</a></p>
+              
                 </div>
             </div>
         </div>
@@ -221,7 +221,7 @@
                             <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button">
-                            <button type="submit">Send message</button>
+                            <button type="submit" onclick="window.location.href='https://accounts.google.com/';">Send message</button>
                         </div>
                     </form>
                 </div>
