--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ an<!DOCTYPE html>
                             <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button">
-                            <button onclick="window.location.href=' mailto:abc@gmail.com subject=”regarding meet” target="_top"';">Send message</button>
+                            <button onclick="window.location.href=' mailto:saketthenuan8045@gmail.com';">Send message</button>
                         </div>
                     </form>
                 </div>
