--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="profile-1.jpg" alt="">
+                    <img src="profile-min.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Saket and I'm a Developer</span></div>
